--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: 6.0.0
   transparent_image: ^2.0.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
